# book_modern_c_plus_plus_programming_with_tdd_j_langr

./: .gitignore  README.md
code/chapter_2_TDD_A_FIRST_EXAMPLE/: CMakeCache.txt  CMakeLists.txt  Makefile  Soundex.hpp  SoundexTest.cpp  cmake_install.cmake  test_application
synopses/chapter_2_TDD_A_FIRST_EXAMPLE/: 01_base.txt  notes.txt
